<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="10%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="@dimen/key_height"
    >

    <Row>
        <Key android:keyLabel="a" 
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_a"
                android:keyEdgeFlags="left" />
        <Key android:keyLabel="b" />
        <Key android:keyLabel="c" 
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_c" />
        <Key android:keyLabel="d" />
        <Key android:keyLabel="e" 
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_e" />
        <Key android:keyLabel="f" />
        <Key android:keyLabel="g" />
        <Key android:keyLabel="h" />
        <Key android:keyLabel="i"
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_i" />
        <Key android:keyLabel="j" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyLabel="k" android:keyEdgeFlags="left" />
        <Key android:keyLabel="l" />
        <Key android:keyLabel="m" />
        <Key android:keyLabel="n"
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_n" />
        <Key android:keyLabel="o"
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_o" />
        <Key android:keyLabel="p" />
        <Key android:keyLabel="q" />
        <Key android:keyLabel="r" />
        <Key android:keyLabel="s"
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_s" />
        <Key android:keyLabel="t" android:keyEdgeFlags="right" />
    </Row>

    <Row>
        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" 
                android:keyWidth="15%p" android:isModifier="true"
                android:iconPreview="@drawable/sym_keyboard_feedback_shift"
                android:isSticky="true" android:keyEdgeFlags="left"/>
        <Key android:keyLabel="u"
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_u" />
        <Key android:keyLabel="v"/>
        <Key android:keyLabel="w"/>
        <Key android:keyLabel="x"/>
        <Key android:keyLabel="y"
                android:popupKeyboard="@xml/kbd_popup_template"
                android:popupCharacters="@string/alternates_for_y"
        />
        <Key android:keyLabel="z"/>
        <Key android:keyLabel=","/>
        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" 
                android:keyWidth="15%p" android:keyEdgeFlags="right" 
                android:iconPreview="@drawable/sym_keyboard_feedback_delete"
                android:isRepeatable="true"/>
    </Row>

    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" 
                android:iconPreview="@drawable/sym_keyboard_feedback_done" 
                android:keyWidth="20%p" android:keyEdgeFlags="left"/>
        <Key android:codes="-2" android:keyLabel="123" android:keyWidth="15%p"/>
        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space" 
                android:iconPreview="@drawable/sym_keyboard_feedback_space"
                android:keyWidth="30%p" android:isRepeatable="true"/>
        <Key android:codes="46" android:keyLabel="." 
                android:popupKeyboard="@xml/popup_punctuation" 
                android:keyWidth="15%p"/>
        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" 
                android:iconPreview="@drawable/sym_keyboard_feedback_return"
                android:keyWidth="20%p" android:keyEdgeFlags="right"/>
    </Row>
</Keyboard>